# calendar-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  OLLAMA_INTEGRATION.md  README.md  TASK_MANAGEMENT.md  lychee.toml  pyproject.toml  requirements-ollama.txt  setup.py
.github/workflows/: linkcheck.yml  publish.yml  tests.yml
calendar_cli/: config.py  gui.py  legacy.py  metadata.py  ollama_integration.py  template.py
examples/: ollama_demo.sh
tests/: _setup_alias  test_cal.py  test_calendar-cli.sh  test_config.py
